# iumrs_icm

./: .gitignore  README.md  pyproject.toml
email/: S1_data.ipynb  S2_docx.ipynb  S3_pdf.ipynb  S4_email.ipynb  S4_html.ipynb  S5_email.ipynb
email/data/: Chair-Cochair.xlsx  Symposia-speakers - Formatted.xlsx
email/output_docx/: t1.docx
email/output_docx_chair/: Invitation IUMRS-ICEM2026_Symp10_Chair_Sirithan Jiemsirilers.docx  Invitation IUMRS-ICEM2026_Symp11_Chair_Worawat Meevasana.docx  Invitation IUMRS-ICEM2026_Symp12_Chair_Anchalee Manonukul.docx  Invitation IUMRS-ICEM2026_Symp13_Chair_Jakrapong Kaewkhao.docx  Invitation IUMRS-ICEM2026_Symp1_Chair_Anucha Watcharapasorn.docx  Invitation IUMRS-ICEM2026_Symp2_Chair_Winita Punyodom.docx  Invitation IUMRS-ICEM2026_Symp3_Chair_Adisorn Tuantranont.docx  Invitation IUMRS-ICEM2026_Symp4_Chair_Naratip Vittayakorn.docx  Invitation IUMRS-ICEM2026_Symp5_Chair_Vinich Promarak.docx  Invitation IUMRS-ICEM2026_Symp6_Chair_Pinit Kidkhunthod.docx  Invitation IUMRS-ICEM2026_Symp7_Chair_Anchalee Manonukul.docx  Invitation IUMRS-ICEM2026_Symp8_Chair_Supree Pinitsoontorn.docx  Invitation IUMRS-ICEM2026_Symp9_Chair_Ittipon Fongkaew.docx
email/output_excel/: S01_data.xlsx
email/templates/: Invitation IUMRS-ICEM2026_Chair_v2_template.docx  Invitation IUMRS-ICEM2026_Chair_v2_template.html  Invitation IUMRS-ICEM2026_Co-chair_v2_template.docx  Invitation IUMRS-ICEM2026_Co-chair_v2_template.html  index.html
split/: P1_pdf_split.ipynb
src/: S4_email.ipynb
src/data/: Symposia-speakers.xlsx
src/output_excel/: data.xlsx
(+115 files in other folders)
