[project]
name = "iumrs_icm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2pdf>=0.1.8",
    "docxtpl>=0.20.2",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "jupyterlab>=4.5.4",
    "notebook>=7.5.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfreader>=0.1.15",
    "pypdf>=6.7.1",
    "pypdf2>=3.0.1",
    "ruff>=0.15.2",
    "xlsxwriter>=3.2.9",
]
